# oxlens-sfu-server

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  GUIDELINES.md  LICENSE  OPERATIONS.md  README.md  TELEMETRY.md  TODO.md  deploy-livechat.sh  deploy-oxlens.sh
.cargo/: config.toml
claude/: SESSION_CONTEXT_20260317.md  SESSION_CONTEXT_20260317_room_sync.md
doc/: BENCHMARK-FANOUT-20260306.md  BENCHMARK-WORKER-20260307.md  MediaTelemetry지침서.md  NEXT-SESSION-GLOBALMETRICS.md  PTT-E5-클라이언트연동-2026-03-08.md  SIMULCAST_REBUILD_GUIDE_20260320.md  VIDEO-LATENCY-TUNING-RESEARCH.md  기술타당성검토-2026-03-07.md  기술회의록-2026-03-08.md  분석서-2026-03-08.md
src/: agg_logger.rs  config.rs  error.rs  lib.rs  main.rs  startup.rs  state.rs  tasks.rs  telemetry_bus.rs
src/media/: mod.rs  router.rs  track.rs
src/metrics/: env.rs  mod.rs  tokio_snapshot.rs
src/room/: floor.rs  mod.rs  participant.rs  ptt_rewriter.rs  room.rs
src/signaling/: handler.rs  message.rs  mod.rs  opcode.rs
src/signaling/handler/: admin.rs  floor_ops.rs  helpers.rs  mod.rs  room_ops.rs  telemetry.rs  track_ops.rs
src/transport/: demux.rs  demux_conn.rs  dtls.rs  ice.rs  mod.rs  sdp.rs  srtp.rs  stun.rs  udp.rs
src/transport/udp/: egress.rs  ingress.rs  metrics.rs  mod.rs  pli.rs  rtcp.rs  rtcp_terminator.rs
