[package]
name = "light-livechat"
version = "0.1.7"
edition = "2024"
description = "High-performance SFU server — 2PC / SDP-free architecture"
authors = ["kodeholic (powered by Claude)"]

[dependencies]
# async runtime
tokio = { version = "1", features = ["full"] }
bytes = "1"

# web framework (signaling)
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors"] }

# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# webrtc modules — mini-livechat과 동일 0.17.x 계열
dtls        = "0.17.1"
webrtc-srtp = "0.17.1"
webrtc-util = "0.17.1"
# concurrency
dashmap = "6"

# crypto (STUN MESSAGE-INTEGRITY, DTLS fingerprint)
hmac = "0.12"
sha1 = "0.10"
sha2 = "0.10"
crc32fast = "1"

# async
async-trait = "0.1"

# stream utilities
futures-util = "0.3"

# logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# utils
uuid = { version = "1", features = ["v4"] }
getrandom = { version = "0.3", features = ["std"] }
thiserror = "2"

[dev-dependencies]
tokio-tungstenite = "0.24"
futures-util = "0.3"
